<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail_Activity">

    <RelativeLayout
        android:id="@+id/id_rela_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/id_tvTitle_AC_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:text="@string/detail_ac_header_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/id_ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/black"
            android:contentDescription="@null"
            android:padding="14dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/id_ivMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="14dp"
            android:src="@drawable/ic_more" />

        <ImageView
            android:visibility="gone"
            android:id="@+id/id_ivDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:padding="14dp"
            android:src="@drawable/ic_done" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/id_ivBack"
            android:background="@color/Color_under_title" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="14dp"
        android:id="@+id/id_rlv_img"
        android:layout_below="@+id/id_rela_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/id_img_detail"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:scaleType="centerCrop" />

        <include
            android:id="@+id/id_include_imgNull_detail"
            android:visibility="gone"
            android:layout_width="55dp"
            layout="@layout/img_when_null"
            android:layout_height="55dp"></include>

    </RelativeLayout>

    <EditText
        android:id="@+id/id_sohieuvb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_rela_layout"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/sohieuvanban"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/id_title_detail_ac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_sohieuvb"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/one_note_demo_tile"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/id_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_title_detail_ac"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/editText_NoiDung"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/id_loai_vanban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_detail_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/loaivanban"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/id_trang_thai_vb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_loai_vanban"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/trangthai"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <EditText
        android:id="@+id/id_coquan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_trang_thai_vb"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/coquan"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />

    <EditText
        android:id="@+id/id_nguoiKy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_coquan"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="12dp"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:enabled="false"
        android:hint="@string/nguoiky"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        tools:ignore="DuplicateIds" />


    <RelativeLayout
        android:id="@+id/rlv_Clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_nguoiKy"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:padding="15dp"
        android:visibility="visible">


        <ImageView
            android:id="@+id/id_imgV_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:src="@drawable/ic_alarm_clock" />

        <TextView
            android:id="@+id/id_detail_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/id_imgV_clock"
            android:hint="@string/one_note_demo_day"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/id_detail_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_detail_day"
            android:layout_toRightOf="@+id/id_imgV_clock"
            android:hint="@string/one_note_demo_time"
            android:textSize="15sp" />

        <View
            android:id="@+id/id_viewDetail"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/id_imgV_clock"
            android:layout_marginStart="3dp"
            android:background="@color/underLine" />


        <ImageView
            android:id="@+id/id_imgV_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_viewDetail"
            android:padding="14dp"
            android:src="@drawable/ic_file_text" />

        <TextView
            android:id="@+id/id_detail_update_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_detail_time"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:gravity="start"
            android:hint="@string/detail_more_update_info"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlv_CheckTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_nguoiKy"
        android:layout_toRightOf="@+id/id_rlv_img"
        android:visibility="gone">

        <RelativeLayout
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="2dp"
            android:id="@+id/id_framelayout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/id_edit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/editText_Time"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/id_imgV_uncheck_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_checkbox_uncheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/id_imgV_uncheck_1"
                android:layout_marginStart="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="12dp"
                android:background="@color/Color_title" />

        </RelativeLayout>

        <LinearLayout
            android:layout_below="@id/id_framelayout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginStart="15dp"
                android:weightSum="10"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:backgroundTint="@color/white"
                    android:id="@+id/id_btn_chonngay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textStyle="bold"
                    android:textColor="@color/Color_Default"
                    android:text="@string/button_chonngay"
                    android:textAllCaps="false"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/id_btn_chongio"
                    android:backgroundTint="@color/white"
                    android:text="@string/button_chongio"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:textColor="@color/Color_Default"
                    android:textStyle="bold"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <FrameLayout
                android:layout_marginStart="15dp"
                android:id="@+id/id_framelayout_2"
                android:paddingTop="15dp"
                android:paddingEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="NotSibling">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/id_dinhkem"
                    android:enabled="false"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dinhkem"
                    android:textColor="@color/black" />

                <ImageView
                    android:layout_marginEnd="5dp"
                    android:id="@+id/id_imgV_dinhkem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_checkbox_uncheck" />

            </FrameLayout>

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>