<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Activity">


  <RelativeLayout
      android:id="@+id/id_rela_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true">

    <TextView
        android:id="@+id/id_tvTitle_AC_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:text="@string/add_ac_title"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/id_ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/black"
        android:contentDescription="@null"
        android:padding="14dp"
        android:src="@drawable/ic_back" />

    <ImageView
        android:id="@+id/id_ivDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@null"
        android:padding="14dp"
        android:src="@drawable/ic_done" />
     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/id_ivBack"
        android:background="@color/Color_under_title" />
  </RelativeLayout>

  <ImageView
      android:id="@+id/id_imgV_anh"
      android:layout_width="55dp"
      android:layout_height="55dp"
      android:layout_below="@id/id_rela_layout"
      android:layout_marginStart="16dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="14dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/ic_image"
      android:backgroundTint="@color/Color_img"
      android:scaleType="centerCrop" />

  <include
      android:id="@+id/id_img_null_add"
      layout="@layout/img_when_null"
      android:layout_width="55dp"
      android:layout_height="55dp"
      android:layout_below="@id/id_rela_layout"
      android:layout_marginStart="16dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="14dp"
      android:layout_marginBottom="20dp"
      android:visibility="invisible"></include>

  <LinearLayout
      android:id="@+id/id_linearLayout_1"
      android:layout_below="@id/id_rela_layout"
      android:layout_marginTop="10dp"
      android:orientation="vertical"
      android:layout_toRightOf="@+id/id_imgV_anh"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_sohieuvb"
        android:hint="@string/sohieuvanban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_edt_title"
        android:hint="@string/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_edt_content"
        android:hint="@string/editText_NoiDung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_loai_vanban"
        android:hint="Loại văn bản"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_trang_thai_vb"
        android:hint="Trạng thái văn bản"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_coquan"
        android:hint="Cơ quan gửi/nhận"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/id_nguoiKy"
        android:hint="Người ký"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/id_framelayout_1"
        android:paddingTop="15dp"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_rela_layout">

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/id_edit_time"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/id_rela_layout"
          android:hint="@string/editText_Time"
          android:textColor="@color/black" />

      <ImageView
          android:layout_marginEnd="5dp"
          android:id="@+id/id_imgV_uncheck_1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_marginTop="12dp"
          android:src="@drawable/ic_checkbox_uncheck" />

    </FrameLayout>

    <LinearLayout
        android:weightSum="10"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

      <androidx.appcompat.widget.AppCompatButton
          android:backgroundTint="@color/white"
          android:id="@+id/id_btn_chonngay"
          android:textStyle="bold"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="5"
          android:text="@string/button_chonngay"
          android:textColor="@color/Color_Default"
          android:textAllCaps="false" />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/id_btn_chongio"
          android:backgroundTint="@color/white"
          android:text="@string/button_chongio"
          android:textStyle="bold"
          android:textAllCaps="false"
          android:layout_width="wrap_content"
          android:textColor="@color/Color_Default"
          android:layout_weight="5"
          android:layout_height="wrap_content"/>





    </LinearLayout>

    <FrameLayout
        android:id="@+id/id_framelayout_2"
        android:paddingTop="15dp"
        android:paddingEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_rela_layout">

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/id_dinhkem"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/id_rela_layout"
          android:hint="@string/dinhkem"
          android:textColor="@color/black" />

      <ImageView
          android:layout_marginEnd="5dp"
          android:id="@+id/id_imgV_dinhkem"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:layout_marginTop="12dp"
          android:src="@drawable/ic_checkbox_uncheck" />

    </FrameLayout>

  </LinearLayout>

</RelativeLayout>