<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Activity">


    <RelativeLayout
        android:id="@+id/id_rela_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/id_textV_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/main_title"
            android:textAlignment="center"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/id_textV_title"
            android:background="@color/Color_under_title" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_textIPLayout_loginAC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_rela_layout"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="24dp"
        android:padding="5dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/id_editT_passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/editpasswd_1"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/id_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_textIPLayout_loginAC"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/white"
        android:padding="20dp"
        android:text="@string/text_btn_login"
        android:textAllCaps="false"
        android:textColor="#6214EC"/>



</RelativeLayout>